--- a/hangul/칠복.html
+++ b/hangul/칠복.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> Ä¥º¹ ?</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¼Õ¿¡ ¸·´ë±â¸¦ µé°í ¹«¾ð°¡¸¦ Ä¡´Â ¸ð¾ç</p><p>¿µ¾î: Beat</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì¹ ë³µ ?</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì†ì— ë§‰ëŒ€ê¸°ë¥¼ ë“¤ê³  ë¬´ì–¸ê°€ë¥¼ ì¹˜ëŠ” ëª¨ì–‘</p><p>ì˜ì–´: Beat</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
