--- a/hangul/하품흠.html
+++ b/hangul/하품흠.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> гог╟хЛ ЩБ</p> <p>╫╨фГ: </p><p>г╝юл: ютю╩ е╘╟т ╧З╥а гог╟го╢б ╩Г╤В ╦П╫ю</p><p>©╣╬Н: Yawn</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> М∙≤М▓┬М²═ Ф╛═</p> <p>Л┼╓М▌═: </p><p>М▓─Л²╢: Л·┘Л²└ М│╛Й╡▄ К╡▄К═╓ М∙≤М▓┬М∙≤К┼■ Л┌╛К·▄ К╙╗Л┼╣</p><p>Л≤│Л√╢: Yawn</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
