--- a/hangul/합할합.html
+++ b/hangul/합할합.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> гугргу ЫЙ</p> <p>╫╨фГ: ╩ОгуаЩ ? ют╠╦ о╒</p><p>г╝юл: ╩ОгуаЩ ╦П╬Г ╧Д╤я╡╠╟З ют╠╦╦П╬Г ╧Д╠в╦╘юл гуцдаЬ ╦П╬Г</p><p>©╣╬Н: Sum</p><p>аъ╠╧: </p><p>юо╤Ф: </p><p>юою╫: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> М∙╘М∙═М∙╘ Е░┬</p> <p>Л┼╓М▌═: Л┌╪М∙╘Л╖▒ ? Л·┘Й╣╛ Е▐ё</p><p>М▓─Л²╢: Л┌╪М∙╘Л╖▒ К╙╗Л√▒ К╟╔К °Й╩▒ЙЁ╪ Л·┘Й╣╛К╙╗Л√▒ К╟╔Й╥╦К╕┤Л²╢ М∙╘ЛЁ░Л╖└ К╙╗Л√▒</p><p>Л≤│Л√╢: Sum</p><p>Л╓▒Й╣╜: </p><p>Л²╪К°╩: </p><p>Л²╪Л²▄: </p> </html>
