--- a/hangul/화살시.html
+++ b/hangul/화살시.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> È­»ì½Ã ãÅ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ³¯ÀÌ À§·Î, ±êÀÌ ¾Æ·¡·Î °£ È­»ì ¸ð¾ç</p><p>¿µ¾î: Arrow</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> í™”ì‚´ì‹œ çŸ¢</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ë‚ ì´ ìœ„ë¡œ, ê¹ƒì´ ì•„ëž˜ë¡œ ê°„ í™”ì‚´ ëª¨ì–‘</p><p>ì˜ì–´: Arrow</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
