--- a/hangul/흉할흉.html
+++ b/hangul/흉할흉.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÈäÇÒÈä ýÕ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ¾ó±¼ÀÌ ÀÏ±×·¯Á® ÈäÇÑ ¸ð¾ç, ¾ÊÁÁÀº ³¸ºûÀÇ ¾ó±¼</p><p>¿µ¾î: Bad</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> í‰í• í‰ å‡¶</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì–¼êµ´ì´ ì¼ê·¸ëŸ¬ì ¸ í‰í•œ ëª¨ì–‘, ì•Šì¢‹ì€ ë‚¯ë¹›ì˜ ì–¼êµ´</p><p>ì˜ì–´: Bad</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
