--- a/hangul/코끼리상.html
+++ b/hangul/코끼리상.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÄÚ³¢¸®»ó ßÚ</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ÄÚ³¢¸® ÄÚ, ±Í, ´Ù¸®, ²¿¸®</p><p>¿µ¾î: Elephant</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ì½”ë¼ë¦¬ìƒ è±¡</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì½”ë¼ë¦¬ ì½”, ê·€, ë‹¤ë¦¬, ê¼¬ë¦¬</p><p>ì˜ì–´: Elephant</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
