--- a/hangul/터럭모.html
+++ b/hangul/터럭모.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÅÍ·°¸ð Ù¾</p> <p>½ºÆç: </p><p>Ç®ÀÌ: Áü½ÂÀÇ ²¿¸®¿¡ ³­ ÅÐ ¸ð¾ç</p><p>¿µ¾î: Fur</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> í„°ëŸ­ëª¨ æ¯›</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ì§ìŠ¹ì˜ ê¼¬ë¦¬ì— ë‚œ í„¸ ëª¨ì–‘</p><p>ì˜ì–´: Fur</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
