--- a/hangul/해년.html
+++ b/hangul/해년.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> ÇØ³â Ò´</p> <p>½ºÆç: </p><p>Ç®ÀÌ: ´ë¼¼ á¦ 90µµ È¸ÀüÇÑ ¸ð¾ç </p><p>¿µ¾î: Year</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> í•´ë…„ å¹´</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: ëŒ€ì„¸ ä¸– 90ë„ íšŒì „í•œ ëª¨ì–‘ </p><p>ì˜ì–´: Year</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
