--- a/hangul/활궁.html
+++ b/hangul/활궁.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> È°±Ã Ïá</p> <p>½ºÆç: </p><p>Ç®ÀÌ: È°°ú È° ½ÃÀ§ ¸ð¾ç</p><p>¿µ¾î: Bow</p><p>Áß±¹: </p><p>ÀÏ¶æ: </p><p>ÀÏÀ½: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> í™œê¶ å¼“</p> <p>ìŠ¤íŽ : </p><p>í’€ì´: í™œê³¼ í™œ ì‹œìœ„ ëª¨ì–‘</p><p>ì˜ì–´: Bow</p><p>ì¤‘êµ­: </p><p>ì¼ëœ»: </p><p>ì¼ìŒ: </p> </html>
