--- a/hangul/길게걸을인.html
+++ b/hangul/길게걸을인.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 길게걸을인 ?</p> <p>스펠: </p><p>풀이: 발과 그 뒤의 발자국 모양 (90도 회전) </p><p>영어: wide step walk</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> 길게걸을인 廴</p> <p>스펠: </p><p>풀이: 발과 그 뒤의 발자국 모양 (90도 회전) </p><p>영어: wide step walk</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
