--- a/hangul/나아갈염.html
+++ b/hangul/나아갈염.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 나아갈염 ?</p> <p>스펠: </p><p>풀이: 사람이 앞으로 나가면 휘날리는 긴 수염 모양</p><p>영어: Go forward</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+  <p> 나아갈염 冉</p> <p>스펠: </p><p>풀이: 사람이 앞으로 나가면 휘날리는 긴 수염 모양</p><p>영어: Go forward</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
