--- a/hangul/달릴발.html
+++ b/hangul/달릴발.html
@@ -1,1 +1,2 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 달릴발 ?</p> <p>스펠: </p><p>풀이: 친구가 달릴 때 개처럼 혀낼밀고 달리는 모습</p><p>영어: Run</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> 
+<p> 달릴발 犮</p> <p>스펠: </p><p>풀이: 친구가 달릴 때 개처럼 혀낼밀고 달리는 모습</p><p>영어: Run</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
