--- a/hangul/뚫을곤.html
+++ b/hangul/뚫을곤.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 뚫을곤 ?</p> <p>스펠: </p><p>풀이: 무언가 뚫는 송곳 모양</p><p>영어: Bore</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 뚫을곤 丨</p> <p>스펠: </p><p>풀이: 무언가 뚫는 송곳 모양</p><p>영어: Bore</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
