--- a/hangul/비추.html
+++ b/hangul/비추.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 비추 ?</p> <p>스펠: </p><p>풀이: 자루에 수건이 달린 마포 걸레를 손에 잡은 모습</p><p>영어: Broom</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 비추 帚</p> <p>스펠: </p><p>풀이: 자루에 수건이 달린 마포 걸레를 손에 잡은 모습</p><p>영어: Broom</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
