--- a/hangul/사람인변.html
+++ b/hangul/사람인변.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 사람인변 ?</p> <p>스펠: </p><p>풀이: 사람인을 축소하여 변으로 만든 글자 </p><p>영어: Human</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 사람인변 亻</p> <p>스펠: </p><p>풀이: 사람인을 축소하여 변으로 만든 글자 </p><p>영어: Human</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
