--- a/hangul/쌀포.html
+++ b/hangul/쌀포.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 쌀포 ?</p> <p>스펠: </p><p>풀이: 아기를 싸고 있는 자궁, 태보 모양</p><p>영어: Wrap</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 쌀포 勹</p> <p>스펠: </p><p>풀이: 아기를 싸고 있는 자궁, 태보 모양</p><p>영어: Wrap</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
