--- a/hangul/집엄.html
+++ b/hangul/집엄.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 집엄 ?</p> <p>스펠: </p><p>풀이: 뒤와 위가 막혀 추위와 비를 막아주는 집</p><p>영어: House</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 집엄 广</p> <p>스펠: </p><p>풀이: 뒤와 위가 막혀 추위와 비를 막아주는 집</p><p>영어: House</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
