--- a/hangul/초두.html
+++ b/hangul/초두.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 초두 ?</p> <p>스펠: </p><p>풀이: 땅에서 돋아난 풀을 옆에서 본 모양, 줄기와 잎만 표현함</p><p>영어: Flower</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 초두 艹</p> <p>스펠: </p><p>풀이: 땅에서 돋아난 풀을 옆에서 본 모양, 줄기와 잎만 표현함</p><p>영어: Flower</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
