--- a/hangul/큰도랑괴.html
+++ b/hangul/큰도랑괴.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 큰도랑괴 ?</p> <p>스펠: </p><p>풀이: 시냇물과 연결된 굽이진 도랑 모양</p><p>영어: Stream</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 큰도랑괴 巜</p> <p>스펠: </p><p>풀이: 시냇물과 연결된 굽이진 도랑 모양</p><p>영어: Stream</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
