--- a/hangul/쌍상투관.html
+++ b/hangul/쌍상투관.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 쌍상투관 ?</p> <p>스펠: </p><p>풀이: 상투를 두 개로 묶은 아이의 머리 모양</p><p>영어: topknot</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 쌍상투관 丱</p> <p>스펠: </p><p>풀이: 상투를 두 개로 묶은 아이의 머리 모양</p><p>영어: topknot</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
