--- a/hangul/옷의변.html
+++ b/hangul/옷의변.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 옷의변 ?</p> <p>스펠: </p><p>풀이: 상의 모양</p><p>영어: Cloth</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 옷의변 衤</p> <p>스펠: </p><p>풀이: 상의 모양</p><p>영어: Cloth</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
