--- a/hangul/일만만.html
+++ b/hangul/일만만.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 일만만 萬</p> <p>스펠: 풀초 ? 밭전 田 발자국유 ?</p><p>풀이: 집게발과 쏘는 꼬리를 가진 전갈, 전갈은 곳곳에 있다. 전갈로 10,000을 표현</p><p>영어: Ten Thousand</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 일만만 萬</p> <p>스펠: 풀초 艹 밭전 田 발자국유 禸</p><p>풀이: 집게발과 쏘는 꼬리를 가진 전갈, 전갈은 곳곳에 있다. 전갈로 10,000을 표현</p><p>영어: Ten Thousand</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
