--- a/hangul/칠복.html
+++ b/hangul/칠복.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 칠복 ?</p> <p>스펠: </p><p>풀이: 손에 막대기를 들고 무언가를 치는 모양</p><p>영어: Beat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 칠복 攵</p> <p>스펠: </p><p>풀이: 손에 막대기를 들고 무언가를 치는 모양</p><p>영어: Beat</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
