--- a/hangul/칼도방.html
+++ b/hangul/칼도방.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 칼도방 ?</p> <p>스펠: </p><p>풀이: 칼도를 방으로 사용하기 위해 만든 간략형</p><p>영어: Knife</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 칼도방 刂</p> <p>스펠: </p><p>풀이: 칼도를 방으로 사용하기 위해 만든 간략형</p><p>영어: Knife</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
