--- a/hangul/터럭삼.html
+++ b/hangul/터럭삼.html
@@ -1,1 +1,1 @@
-<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 터럭삼 ?</p> <p>스펠: </p><p>풀이: 긴 털 모양</p><p>영어: Fur</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
+<html> <meta http-equiv="Content-Type" content="text/html"; charset=utf-8"> <p> 터럭삼 彡</p> <p>스펠: </p><p>풀이: 긴 털 모양</p><p>영어: Fur</p><p>중국: </p><p>일뜻: </p><p>일음: </p> </html>
