--- a/search.html
+++ b/search.html
@@ -44,4 +44,6 @@ function myFunction2() {
   
 </script>
   
+<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fgjbae1212%2Fhit-counter"/></a>
+  
 <html>
