--- a/category.html
+++ b/category.html
@@ -55,23 +55,29 @@
             <label for="C3">중학교 한자 900</label>
             <ul>
                 <li><a href="https://muckmool.github.io/middle.html#01.수" target="main">01.수</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#02.천체" target="main">02.천체</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#03.산" target="main">03.산</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#04.천" target="main">04.천</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#05.초" target="main">05.초</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#06.목" target="main">06.목</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#07.동물" target="main">07.동물</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#08.농사" target="main">08.농사</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#09.사회" target="main">09.사회</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#10.의" target="main">10.의</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#11.식" target="main">11.식</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#12.주" target="main">12.주</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#13.제사" target="main">13.제사</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#14.전쟁" target="main">14.전쟁</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#15.사람몸" target="main">15.사람몸</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#16.신체일부" target="main">16.신체일부</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#17.기술" target="main">17.기술</a></li>
-                <li><a href="https://muckmool.github.io/middle.html#18.추상" target="main">18.추상</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#02.십간" target="main">02.십간</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#03.십이지" target="main">03.십이지</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#04.계절" target="main">04.계절</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#05.시간" target="main">05.시간</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#06.산천초목" target="main">06.산천초목</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#07.대기_빛_날씨" target="main">07.대기_빛_날씨</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#08.공간과형태" target="main">08.공간과형태</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#09.동물_생로병사_사람" target="main">09.동물_생로병사_사람</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#10.신체일부" target="main">10.신체일부</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#11.감각과감정" target="main">11.감각과감정</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#12.심리" target="main">12.심리</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#13.의식주" target="main">13.의식주</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#14.교육" target="main">14.교육</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#15.농사" target="main">15.농사</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#16.직업과기술" target="main">16.직업과기술</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#17.경제와도시" target="main">17.경제와도시</a></li>
+                <li><a href="https://muckmool.github.io/middle.html#18.의사소통" target="main">18.의사소통</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#19.법과범죄" target="main">19.법과범죄</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#20.제사와전쟁" target="main">20.제사와전쟁</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#21.동사" target="main">21.동사</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#22.형용사" target="main">22.형용사</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#23.만남과헤어짐" target="main">23.만남과헤어짐</a></li>
+	    <li><a href="https://muckmool.github.io/middle.html#24.부사" target="main">24.부사</a></li>
 
             </ul>
         </li>
