high school hanja

--- a/category.html
+++ b/category.html
@@ -87,24 +87,39 @@
             
             <label for="C4">고등학교 한자 900자</label>
             <ul>
-                <li><a href="https://muckmool.github.io/high.html#01.수" target="main">01.수</a></li>
-                <li><a href="https://muckmool.github.io/high.html#02.천체" target="main">02.천체</a></li>
-                <li><a href="https://muckmool.github.io/high.html#03.산" target="main">03.산</a></li>
-                <li><a href="https://muckmool.github.io/high.html#04.천" target="main">04.천</a></li>
-                <li><a href="https://muckmool.github.io/high.html#05.초" target="main">05.초</a></li>
-                <li><a href="https://muckmool.github.io/high.html#06.목" target="main">06.목</a></li>
-                <li><a href="https://muckmool.github.io/high.html#07.동물" target="main">07.동물</a></li>
-                <li><a href="https://muckmool.github.io/high.html#08.농사" target="main">08.농사</a></li>
-                <li><a href="https://muckmool.github.io/high.html#09.사회" target="main">09.사회</a></li>
-                <li><a href="https://muckmool.github.io/high.html#10.의" target="main">10.의</a></li>
-                <li><a href="https://muckmool.github.io/high.html#11.식" target="main">11.식</a></li>
-                <li><a href="https://muckmool.github.io/high.html#12.주" target="main">12.주</a></li>
-                <li><a href="https://muckmool.github.io/high.html#13.제사" target="main">13.제사</a></li>
-                <li><a href="https://muckmool.github.io/high.html#14.전쟁" target="main">14.전쟁</a></li>
-                <li><a href="https://muckmool.github.io/high.html#15.사람몸" target="main">15.사람몸</a></li>
-                <li><a href="https://muckmool.github.io/high.html#16.신체일부" target="main">16.신체일부</a></li>
-                <li><a href="https://muckmool.github.io/high.html#17.기술" target="main">17.기술</a></li>
-                <li><a href="https://muckmool.github.io/high.html#18.추상" target="main">18.추상</a></li>
+                <li><a href="https://muckmool.github.io/high.html#01.시간의시점" target="main">01.시간의시점</a></li>
+                <li><a href="https://muckmool.github.io/high.html#02.시간의량" target="main">02.시간의량</a></li>
+                <li><a href="https://muckmool.github.io/high.html#03.시간의빈도속도기준" target="main">03.시간의빈도속도기준</a></li>
+                <li><a href="https://muckmool.github.io/high.html#04.추상단위_량_비율_셈" target="main">04.추상단위_량_비율_셈</a></li>
+                <li><a href="https://muckmool.github.io/high.html#05.추상순서_위치_집합" target="main">05.추상순서_위치_집합</a></li>
+                <li><a href="https://muckmool.github.io/high.html#06.추상_가로세로_형" target="main">06.추상_가로세로_형</a></li>
+                <li><a href="https://muckmool.github.io/high.html#07.추상_정도_상징_움직임" target="main">07.추상_정도_상징_움직임</a></li>
+                <li><a href="https://muckmool.github.io/high.html#08.경제" target="main">08.경제</a></li>
+                <li><a href="https://muckmool.github.io/high.html#09.가족" target="main">09.가족</a></li>
+                <li><a href="https://muckmool.github.io/high.html#10.교통통신" target="main">10.교통통신</a></li>
+                <li><a href="https://muckmool.github.io/high.html#11.기술" target="main">11.기술</a></li>
+                <li><a href="https://muckmool.github.io/high.html#12.날씨" target="main">12.날씨</a></li>
+                <li><a href="https://muckmool.github.io/high.html#13.농사" target="main">13.농사</a></li>
+                <li><a href="https://muckmool.github.io/high.html#14.동물" target="main">14.동물</a></li>
+                <li><a href="https://muckmool.github.io/high.html#15.식물" target="main">15.식물</a></li>
+                <li><a href="https://muckmool.github.io/high.html#16.법" target="main">16.법</a></li>
+                <li><a href="https://muckmool.github.io/high.html#17.사회" target="main">17.사회</a></li>
+                <li><a href="https://muckmool.github.io/high.html#18.병" target="main">18.병</a></li>
+                <li><a href="https://muckmool.github.io/high.html#19.의식주" target="main">19.의식주</a></li>
+                <li><a href="https://muckmool.github.io/high.html#20.신체" target="main">20.신체</a></li>
+                <li><a href="https://muckmool.github.io/high.html#21.심리" target="main">21.심리</a></li>
+                <li><a href="https://muckmool.github.io/high.html#22.언어" target="main">22.언어</a></li>
+                <li><a href="https://muckmool.github.io/high.html#23.지식" target="main">23.지식</a></li>
+                <li><a href="https://muckmool.github.io/high.html#24.오락" target="main">24.오락</a></li>
+                <li><a href="https://muckmool.github.io/high.html#25.위험" target="main">25.위험</a></li>
+                <li><a href="https://muckmool.github.io/high.html#26.자연" target="main">26.자연</a></li>
+                <li><a href="https://muckmool.github.io/high.html#27.전쟁" target="main">27.전쟁</a></li>
+                <li><a href="https://muckmool.github.io/high.html#28.종교" target="main">28.종교</a></li>
+                <li><a href="https://muckmool.github.io/high.html#29.명사" target="main">29.명사</a></li>
+                <li><a href="https://muckmool.github.io/high.html#30.동사" target="main">30.동사</a></li>
+                <li><a href="https://muckmool.github.io/high.html#31.형용사" target="main">31.형용사</a></li>
+                <li><a href="https://muckmool.github.io/high.html#32.부사" target="main">32.부사</a></li>
+
 
             </ul>
         </li>
