--- a/search.html
+++ b/search.html
@@ -46,6 +46,6 @@ function myFunction2() {
   
 <p>
 <a href=" "><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmuckmool.github.io%2Fhit-counter&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
-<br> <a href ="muckmool.github.io/write.html" target="main">
+<br> <a href ="muckmool.github.io/write.html" target="main"> 글쓰기 </a>
   
 <html>
