--- a/write.html
+++ b/write.html
@@ -21,7 +21,10 @@ function myFunction() {
     var x = document.getElementById("hangul").value;
     var y = document.getElementById("hanja").value;
   
-    document.write(x, ' ', y);
+    document.write('<p>', x, ' ', y);
+  
+    document.write('<p>', '한글 <span class=''green_window''> <input id=hangul type="text" class=''input_text'' name="hangul" value = x onkeydown="enterSearch()"/></span>');
+  
 }
   
 </script>
