--- a/write.html
+++ b/write.html
@@ -23,7 +23,7 @@ function myFunction() {
   
     document.write('<p>', x, ' ', y);
   
-    // document.write('<p>', '한글 <span class=''green_window''> <input id=hangul type="text" class=''input_text'' name="hangul" value = x onkeydown="enterSearch()"/></span>');
+    document.write('<p>', '한글 <span class="green_window"> <input id = hangul type="text" class="input_text" name="hangul" value =', x , ' onkeydown="enterSearch()"/></span>');
   
 }
   
