--- a/write1.html
+++ b/write1.html
@@ -21,9 +21,8 @@ function myFunction() {
     var x = document.getElementById("hangul").value;
     var y = document.getElementById("hanja").value;
   
-    document.write('<p>', x, ' ', y);
-  
-    document.write('<p>', '한글 <span class="green_window"> <input id = hangul type="text" class="input_text" name="hangul" value =', x , ' onkeydown="enterSearch()"/></span>');
+    document.write('<p target = "blank" >', x, ' ', y ,</p>);
+     
   
 }
   
