--- a/write1.html
+++ b/write1.html
@@ -4,6 +4,12 @@
   
 <p>한글 <span class='green_window'> <input id=hangul type="text" class='input_text' name="hangul" onkeydown="enterSearch()"/></span>
 <p>한자 <span class='green_window'> <input id=hanja type="text" class='input_text' name="hanja" onkeydown="enterSearch()"/></span>
+<p>스펠 <span class='green_window'> <input id=spell type="text" class='input_text' name="spell" onkeydown="enterSearch()"/></span>
+<p>풀이 <span class='green_window'> <input id=story type="text" class='input_text' name="story" onkeydown="enterSearch()"/></span>  
+<p>영어 <span class='green_window'> <input id=english type="text" class='input_text' name="english" onkeydown="enterSearch()"/></span> 
+<p>중국 <span class='green_window'> <input id=china type="text" class='input_text' name="china" onkeydown="enterSearch()"/></span> 
+<p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning" onkeydown="enterSearch()"/></span>
+<p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound" onkeydown="enterSearch()"/></span> 
   
 <input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
 
@@ -19,13 +25,22 @@ function enterSearch() {
   
 function myFunction() {
   
-    var x = document.getElementById("hangul").value;
-    var y = document.getElementById("hanja").value;
-
-   document.write('<p>한글 <span class="green_window"> <input id=hangul type="text" class="input_text" name="hangul" value =', x , ' onkeydown="enterSearch()"/></span> ');
-   document.write('<p>한자 <span class="green_window"> <input id=hanja type="text" class="input_text" name="hanja" value =', y , ' onkeydown="enterSearch()"/></span>   ');               
+    var f_hangul = document.getElementById("hangul").value;
+    var f_hanja = document.getElementById("hanja").value;
+    var f_spell = document.getElementById("spell").value;
+    var f_story = document.getElementById("story").value;
+    var f_english = document.getElementById("english").value;
+    var f_china = document.getElementById("china").value;
+    var f_meaning = document.getElementById("meaning").value;
+    var f_sound = document.getElementById("sound").value;
    
-   document.write('<p>', x ,' ', y);
+    document.write('<p>', f_hangul ,' ', f_hanja, ' [', f_english , ' ' , f_china , ']');
+    document.write('<p>스펠: ', f_spell);
+    document.write('<p>풀이: ' f_story);
+    document.write('<p>영어: ' f_english);
+    document.write('<p>중국: ' f_china);    
+    document.write('<p>일뜻: ' f_meaning);
+    document.write('<p>일음: ' f_sound);
   
 }
   
