--- a/write1.html
+++ b/write1.html
@@ -11,7 +11,7 @@
 <p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning"  style="width:300px" onkeydown="enterSearch()"/></span>
 <p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
   
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
 
   
