--- a/write1.html
+++ b/write1.html
@@ -12,6 +12,7 @@
 <p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
   
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
 
   
