--- a/write1.html
+++ b/write1.html
@@ -1,18 +1,17 @@
 <html>
   
 <p>
+
   
-<p>한글 <span class='green_window'> <input id=hangul type="text" class='input_text' name="hangul"    style="width:300px" onkeydown="enterSearch()"/></span>
-<p>한자 <span class='green_window'> <input id=hanja type="text" class='input_text' name="hanja"      style="width:300px" onkeydown="enterSearch()"/></span>
-<p>스펠 <span class='green_window'> <input id=spell type="text" class='input_text' name="spell"      style="width:600px" onkeydown="enterSearch()"/></span>
-<p>풀이 <span class='green_window'> <input id=story type="text" class='input_text' name="story"      style="width:600px" onkeydown="enterSearch()"/></span>  
-<p>영어 <span class='green_window'> <input id=english type="text" class='input_text' name="english"  style="width:300px" onkeydown="enterSearch()"/></span> 
-<p>중국 <span class='green_window'> <input id=china type="text" class='input_text' name="china"      style="width:300px" onkeydown="enterSearch()"/></span> 
-<p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning"  style="width:300px" onkeydown="enterSearch()"/></span>
-<p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
+<p>한글 <span class='green_window'> <input id=hangul type="text" class='input_text' name="hangul"    onkeydown="enterSearch()"/></span>
+<p>한자 <span class='green_window'> <input id=hanja type="text" class='input_text' name="hanja"      onkeydown="enterSearch()"/></span>
+//<p>스펠 <span class='green_window'> <input id=spell type="text" class='input_text' name="spell"      style="width:600px" onkeydown="enterSearch()"/></span>
+//<p>풀이 <span class='green_window'> <input id=story type="text" class='input_text' name="story"      style="width:600px" onkeydown="enterSearch()"/></span>  
+//<p>영어 <span class='green_window'> <input id=english type="text" class='input_text' name="english"  style="width:300px" onkeydown="enterSearch()"/></span> 
+//<p>중국 <span class='green_window'> <input id=china type="text" class='input_text' name="china"      style="width:300px" onkeydown="enterSearch()"/></span> 
+//<p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning"  style="width:300px" onkeydown="enterSearch()"/></span>
+//<p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
   
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
 
   
@@ -29,20 +28,22 @@ function myFunction() {
   
     var f_hangul = document.getElementById("hangul").value;
     var f_hanja = document.getElementById("hanja").value;
-    var f_spell = document.getElementById("spell").value;
-    var f_story = document.getElementById("story").value;
-    var f_english = document.getElementById("english").value;
-    var f_china = document.getElementById("china").value;
-    var f_meaning = document.getElementById("meaning").value;
-    var f_sound = document.getElementById("sound").value;
+  //  var f_spell = document.getElementById("spell").value;
+  //  var f_story = document.getElementById("story").value;
+  //  var f_english = document.getElementById("english").value;
+  //  var f_china = document.getElementById("china").value;
+  //  var f_meaning = document.getElementById("meaning").value;
+  //  var f_sound = document.getElementById("sound").value;
    
-    document.write('<p>', f_hangul ,' ', f_hanja, ' [', f_english , ' ' , f_china , ']');
-    document.write('<p>스펠: ', f_spell);
-    document.write('<p>풀이: ' f_story);
-    document.write('<p>영어: ' f_english);
-    document.write('<p>중국: ' f_china);    
-    document.write('<p>일뜻: ' f_meaning);
-    document.write('<p>일음: ' f_sound);
+  document.write('<p>', f_hangul, ' ', f_hanja);
+                 
+  //  document.write('<p>', f_hangul ,' ', f_hanja, ' [', f_english , ' ' , f_china , ']');
+  //  document.write('<p>스펠: ', f_spell);
+  //  document.write('<p>풀이: ' f_story);
+  //  document.write('<p>영어: ' f_english);
+  //  document.write('<p>중국: ' f_china);    
+  //  document.write('<p>일뜻: ' f_meaning);
+  //  document.write('<p>일음: ' f_sound);
   
 }
   
