--- a/write1.html
+++ b/write1.html
@@ -35,7 +35,7 @@ function myFunction() {
     var f_sound = document.getElementById("sound").value;
    
                 
-    document.write('<p>', f_hangul ,' ', f_hanja, ' ', f_english , ' ' , f_china );
+    document.write('<p>', f_hangul ,' ', f_hanja, ' [', f_english , ' ' , f_china , ']' );
     document.write('<p>스펠: ', f_spell);
     document.write('<p>풀이: ', f_story);
     document.write('<p>영어: ', f_english);
