--- a/search.html
+++ b/search.html
@@ -44,8 +44,7 @@ function myFunction2() {
   
 </script>
   
-<p> &nbsp &nbsp &nbsp &nbsp <a href=" "><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmuckmool.github.io%2Fhit-counter&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
-&nbsp &nbsp  <a href ="muckmool.github.io/write1.html" target="main"> 글자쓰기 </a>
+&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write1.html" target="main"> 글자쓰기 </a>
 &nbsp &nbsp  <a href ="muckmool.github.io/write2.html" target="main"> 단어쓰기 </a>
   
 <html>
