--- a/search.html
+++ b/search.html
@@ -44,6 +44,8 @@ function myFunction2() {
   
 </script>
   
+<p>
+&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write1.html" target="main"> 글자쓰기 </a>
 &nbsp &nbsp  <a href ="muckmool.github.io/write2.html" target="main"> 단어쓰기 </a>
   
