--- a/search.html
+++ b/search.html
@@ -45,7 +45,7 @@ function myFunction2() {
 </script>
   
 <p>
-&nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp
+&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write1.html" target="main"> 새 글 쓰기 </a>
 
   
