--- a/write3.html
+++ b/write3.html
@@ -1,5 +1,7 @@
 <html>
  
+<input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
+ 
 <script type="text/javascript" src="write.js"></script>
   
 </html>
