--- a/write3.html
+++ b/write3.html
@@ -1,7 +1,16 @@
 <html>
  
+<p><p>한글 <span class='green_window'> <input id=hangul type="text" class='input_text' name="hangul"    style="width:300px" onkeydown="enterSearch()"></span>
+<p><p>한자 <span class='green_window'> <input id=hanja type="text" class='input_text' name="hanja"      style="width:300px" onkeydown="enterSearch()"></span>
+<p><p>스펠 <span class='green_window'> <input id=spell type="text" class='input_text' name="spell"      style="width:600px" onkeydown="enterSearch()"/></span>
+<p><p>풀이 <span class='green_window'> <input id=story type="text" class='input_text' name="story"      style="width:600px" onkeydown="enterSearch()"/></span>  
+<p><p>영어 <span class='green_window'> <input id=english type="text" class='input_text' name="english"  style="width:300px" onkeydown="enterSearch()"/></span> 
+<p><p>중국 <span class='green_window'> <input id=china type="text" class='input_text' name="china"      style="width:300px" onkeydown="enterSearch()"/></span> 
+<p><p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning"  style="width:300px" onkeydown="enterSearch()"/></span>
+<p><p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
+  
 <input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
- 
-<script type="text/javascript" src="write.js"></script>
+
+<script type="text/javascript" src="write2.js"></script>
   
 </html>
