--- a/write3.html
+++ b/write3.html
@@ -1,4 +1,15 @@
 <html>
+<head>
+    <script>
+        function popup(){
+            var url = "popup.html";
+            var name = "popup test";
+            var option = "width = 500, height = 500, top = 100, left = 200, location = no"
+            window.open(url, name, option);
+        }
+    </script>
+</head> 
+ 
  
 <p><p>한글 <span class='green_window'> <input id=hangul type="text" class='input_text' name="hangul"    style="width:300px" onkeydown="enterSearch()"></span>
 <p><p>한자 <span class='green_window'> <input id=hanja type="text" class='input_text' name="hanja"      style="width:300px" onkeydown="enterSearch()"></span>
