--- a/write1.html
+++ b/write1.html
@@ -10,7 +10,8 @@
 <p><p>일뜻 <span class='green_window'> <input id=meaning type="text" class='input_text' name="meaning"  style="width:300px" onkeydown="enterSearch()"/></span>
 <p><p>일음 <span class='green_window'> <input id=sound type="text" class='input_text' name="sound"      style="width:300px" onkeydown="enterSearch()"/></span> 
   
-<input type="button" class='sch_smit' value="발행" onclick="myFunction()"/>
+<input type="button" class='sch_smit' value="글생성" onclick="myFunction()"/>
+<input type="button" class='sch_smit' value="파일생성" onclick="myFunction2()"/>
 
 <script type="text/javascript" src="write1.js"></script>
   
