--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@ function myFunction2() {
   
 <p>
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write1.html" target="main"> 새 글 쓰기 </a>
+&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write.html" target="main"> 새 글 쓰기 </a>
 
   
 <html>
