--- a/write.html
+++ b/write.html
@@ -9,7 +9,7 @@
 <p>일뜻: <input id='meaning' style="width:300px"  onkeyup='out_meaning()'/>
 <p>일음: <input id='sound'     style="width:300px" onkeyup='out_sound()'/>
 
-&nbsp <button id="btnFile">파일생성요청</button>
+&nbsp <button id="btnFile1">한글 파일생성</button> &nbsp <button id="btnFile2">한자 파일생성</button>
 
 <p> -----------------------------------------------------</p>
 <p><span id='result_hangul'></span> &nbsp <span id='result_hanja'></span> 
@@ -100,9 +100,14 @@ function out_sound()  {
   document.getElementById("result_sound2").innerText = name;
 }
 
-document.getElementById("btnFile").onclick = function() { 
-              // 파일생성요청코드
+document.getElementById("btnFile1").onclick = function() { 
+              // 한글 제목 파일 생성 코드
           }
+document.getElementById("btnFile2").onclick = function() { 
+              // 한자 제목 파일 생성 코드
+          }
+  
+  
 </script>
 
 
