--- a/memory.html
+++ b/memory.html
@@ -5,7 +5,12 @@
 <p>
 <p>한자 알파벳을 효과적으로 외우는 방법은 영어에서 "에이, 비, 씨" 하듯이 "날일, 달월, 저녁석"처럼 뜻과 음을 한꺼번에 발음하면서 외우는 것입니다. 발음하면서 머리속으로 글자의 모양을 떠올려 봅시다. 기억속에 오래 남게됩니다.</p>
 <p>
-<p>이 알파벳 300글자를 열심히 외우고 나면 그 다음은 더 복잡한 단어를 한자 스펠링으로 외우면 됩니다.</p>
+<p>이 알파벳 300글자를 열심히 외우고 나면 그 다음은 더 복잡한 단어를 한자 스펠링으로 외울 수 있게 됩니다.</p>
 <p>
-<p>예를 들어, 밝을명 明 은 날일 日 과 달월 月 로 구성되어 있어 아침이 밝아 올 때 해가 떠있고 달이 걸려있는 모양을 그린 글자입니다. 달이 떠있는데 해가 솟으니 날이 밝는다. 이렇게 이야기를 만들어 스펠링을 외우면 밝을명 明 을 읽을수도 있고 쓸 수도 있습니다.</p>
+<p>예를 들어, 밝을명 明 은 날일 日 과 달월 月 로 구성되어 있어 아침이 밝아 올 때 해가 떠있고 달이 걸려있는 모양을 그린 글자입니다. 
+  달이 떠있는데 해가 솟으니 날이 밝는다. 이렇게 이야기를 만들어 스펠링을 외우면 밝을명 明 을 읽을수도 있고 쓸 수도 있습니다.</p>
+<p>
+<p>한 글자로 된 단어 1800개 정도를 외우면 두 개 이상 글자로 된 복합 단어를 외울 수 있고 문장도 읽고 쓸 수 있습니다. 계속 바뀌고 있지만 중학교 필수 한자 900자 고등학교 필수 한자 900자 정도 
+  외우면 출판물에 나오는 90%이상 단어를 이해할 수 있습니다. 모르는 단어는 휴대폰에 필기인식 앱을 깔면 글자를 보고 외워서 그대로 쓸 수 있습니다. 우리가 모르는 영어단어를 사전에 찾을 수 있듯이 
+  한자도 사전에서 찾을 수 있습니다. 그래서 한자 알파벳을 무조건 외우는 것이 중요합니다. 한자 알파벳 300자는 상형문자 혹은 지사자로 되어 있어 조금만 노력하면 충분히 외울 수 있습니다.
 </html>
