--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
           <frame src = "category.html" name = "category" noresize scrolling ="auto">
           <frame src = "search.html" name = "search" noresize scrolling ="auto">
      </frameset>
-    <frame src = "main.html" name = "main" noresize>
+    <frame src = "memory.html" name = "main" noresize>
 </frameset>
 <html>
