--- a/memory.html
+++ b/memory.html
@@ -13,6 +13,6 @@
 <p>한 글자로 된 단어 1800개 정도를 외우면 두 개 이상 글자로 된 복합 단어를 외울 수 있고 문장도 읽고 쓸 수 있습니다. 계속 바뀌고 있지만 중학교 필수 한자 900자 고등학교 필수 한자 900자 정도 
   외우면 출판물에 나오는 90%이상 단어를 이해할 수 있습니다. 
 <p>
-<p>모르는 단어는 휴대폰에 필기인식 앱을 깔면 글자를 보고 외워서 그대로 쓸 수 있습니다. 우리가 모르는 영어단어를 사전에 찾을 수 있듯이 
-  한자도 사전에서 찾을 수 있습니다. 그래서 한자 알파벳을 무조건 외우는 것이 중요합니다. 한자 알파벳 300자는 상형문자 혹은 지사자로 되어 있어 조금만 노력하면 충분히 외울 수 있습니다.
+<p>모르는 단어는 휴대폰에 필기인식 앱을 깔고 글자를 보고 외워서 그대로 써서 조회할 수 있습니다. 우리가 모르는 영어단어를 사전에 찾을 수 있듯이 
+  한자도 사전에서 찾을 수 있습니다. 그렇기 때문에 한자 알파벳 300자를 무조건 외우는 것이 중요합니다. 한자 알파벳 300자는 상형문자 혹은 지사자로 되어 있어 조금만 노력하면 쉽게 외울 수 있습니다.
 </html>
