--- a/search.html
+++ b/search.html
@@ -37,7 +37,7 @@ function myFunction() {
 function myFunction2() {
     var x = document.getElementById("text2").value;
   
-    if(true) {  document.write('<a href="https://muckmool.github.io/hangul/' + x + '.html" target="main">' + x + '</a>'); }
+    if() {  document.write('<a href="https://muckmool.github.io/hangul/' + x + '.html" target="main">' + x + '</a>'); }
     else { document.write("파일 없음"); }
   
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
