--- a/search.html
+++ b/search.html
@@ -4,8 +4,8 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text type="text" class='input_text' name="search" onkeydown="enterSearch()"/></span>
-<input type="button" class='sch_smit' value="검색" onclick="myFunction()"/>
+<input id=text1 type="text" class='input_text' name="search" onkeydown="enterSearch1()"/></span>
+<input type="button" class='sch_smit' value="검색" onclick="myFunction1()"/>
 
 <p>한글
 <span class='green_window'>
@@ -14,9 +14,9 @@
   
 <!-- JAVASCRIPT -->
 <script type="text/javascript">
-function enterSearch() {
+function enterSearch1() {
     if(event.keyCode == 13){
-        myFunction();  // 실행할 이벤트
+        myFunction1();  // 실행할 이벤트
     }
 }
   
@@ -28,26 +28,17 @@ function enterSearch2() {
 }
 
   
-function myFunction() {
-    var x = document.getElementById("text").value;
+function myFunction1() {
+    var x = document.getElementById("text1").value;
     document.write('<a href="https://muckmool.github.io/hanja/'+ x + '.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
 }
 
-  
-  const request = new XMLHttpRequest();
-  const url = 'http://muckmool.github.io/hangul/index.html'; // 긁어오고 싶은 주소를 넣는다.
-  request.open('GET', url, true);
-  if(  request.responseText.indexOf(x) > 0 ) {  document.write('<a href="https://muckmool.github.io/hangul/' + x + '.html" target="main">' + x + '</a>'); }
-  else { document.write("파일 없음"); }
-  
-  
+
 function myFunction2() {
-    
     var x = document.getElementById("text2").value;
-    request.send();
+    document.write('<a href="https://muckmool.github.io/hangul/'+ x + '.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
-      
 }
 
   
