--- a/search.html
+++ b/search.html
@@ -36,26 +36,9 @@ function myFunction1() {
 
 
 function myFunction2() {
-    var x = document.getElementById("text2").value;
-
-    const request = new XMLHttpRequest();
-    const url = 'http://muckmool.github.io/hangul/index.html'; // 긁어오고 싶은 주소를 넣는다. 
-    request.open('GET', url, true);
-
-    request.onload = function () {
-    var match = x;
-    if( request.responseText.indexOf(match) > 0 ) {
-    document.write('<a href="https://muckmool.github.io/hangul/'+ x + '.html" target="main">' + x + '</a>');
-    }
-    else
-    {
-    document.write('문서없음');
-    }
-
+    var x = document.getElementById("text3").value;
+    document.write('<a href="https://muckmool.github.io/han/'+ x + '.html" target="main">' + x + '</a>');
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
-    };
-
-    request.send();
 }
 
   
