--- a/url_check2.html
+++ b/url_check2.html
@@ -17,13 +17,9 @@ function myFunction2() {
 
     request.onload = function () {
     var match = x;
-    if( request.responseText.indexOf(match) > 0 ) {
-    document.write('<a href="https://muckmool.github.io/hangul/'+ x + '.html" target="main">' + x + '</a>');
-    }
-    else
-    {
-    document.write('문서없음');
-    }
+      
+    document.write( request.responseText.indexOf(match) );
+        
 
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
     };
