--- a/url_check2.html
+++ b/url_check2.html
@@ -5,11 +5,8 @@
 <script>
 
 
-    var x = "나무목";
-
-
     const request = new XMLHttpRequest();
-    const url = 'http://muckmool.github.io/hangul/index.html'; // 긁어오고 싶은 주소를 넣는다. 
+    const url = 'http://muckmool.github.io/hangul/한일.html'; // 긁어오고 싶은 주소를 넣는다. 
     request.open('GET', url, true);
 
     request.onload = function () {
