--- a/search_all.html
+++ b/search_all.html
@@ -1,3 +1,10 @@
+<html>
+    
+<p>한글
+<span class='green_window'>
+<input id=text2 type="text" class='input_text' name="search2" onkeydown="enterSearch2()"/></span>
+<input type="button" class='sch_smit' value="검색" onclick="myFunction2()"/>    
+
 
 <script>
 
