--- a/search.html
+++ b/search.html
@@ -1,5 +1,10 @@
 <html>
-  
+
+<head>
+<script type="text/javascript" src="search_hangul_alphabet.js"></script>
+</head>
+ 
+<body> 
 <p>
   
 <p>한자
@@ -36,9 +41,12 @@ function myFunction1() {
 
 
 function myFunction2() {
+
     var x = document.getElementById("text2").value;
-    document.write('<a href="https://muckmool.github.io/han/'+ x + '.html" target="main">' + x + '</a>');
-    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
+
+    search1(x);
+
+    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');                      
 }
 
   
@@ -49,5 +57,6 @@ function myFunction2() {
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write.html" target="main"> 새 글 쓰기 </a>
 
+</body>
   
 <html>
