--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 
 <head>
 <script type="text/javascript" src="search_hangul_alphabet.js"></script>
+<script type="text/javascript" src="search_hanja_alphabet.js"></script>
 </head>
  
 <body> 
@@ -35,8 +36,10 @@ function enterSearch2() {
   
 function myFunction1() {
     var x = document.getElementById("text1").value;
-    document.write('<a href="https://muckmool.github.io/hanja/'+ x + '.html" target="main">' + x + '</a>');
-    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');
+
+    search1(x);
+
+    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> '); 
 }
 
 
@@ -44,7 +47,7 @@ function myFunction2() {
 
     var x = document.getElementById("text2").value;
 
-    search1(x);
+    search2(x);
 
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');                      
 }
