--- a/search.html
+++ b/search.html
@@ -61,8 +61,7 @@ function myFunction2() {
 </script>
   
 <p>
-&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  <a href ="muckmool.github.io/write.html" target="main"> 새 글 쓰기 </a>
+<p>  <a href ="muckmool.github.io/write.html" target="main"> 새 글 쓰기 </a>
 
 </body>
   
