--- a/search.html
+++ b/search.html
@@ -12,12 +12,12 @@
   
 <p>한자
 <span class='green_window'>
-<input id=text1 type="text" class='input_text' name="search" onkeydown="enterSearch1()"/></span>
+<input id=text1 type="text" class='input_text' style="width:100px" name="search" onkeydown="enterSearch1()"/></span>
 <input type="button" class='sch_smit' value="검색" onclick="myFunction1()"/>
 
 <p>한글
 <span class='green_window'>
-<input id=text2 type="text" class='input_text' name="search2" onkeydown="enterSearch2()"/></span>
+<input id=text2 type="text" class='input_text' style="width:100px" name="search2" onkeydown="enterSearch2()"/></span>
 <input type="button" class='sch_smit' value="검색" onclick="myFunction2()"/>
   
 <!-- JAVASCRIPT -->
