--- a/write2.html
+++ b/write2.html
@@ -74,7 +74,7 @@ function saveAsFile(str, filename) {
 
 document.getElementById("btnFile1").onclick = function() { 
 
-              const f1_name = document.getElementById('hangul').value + ".html";
+              const f1_name = document.getElementById('result_hangul').value + ".html";
 
               const f_msg = 
 
@@ -95,7 +95,7 @@ document.getElementById("btnFile1").onclick = function() {
 
 document.getElementById("btnFile2").onclick = function() { 
     
-              const f2_name = document.getElementById('hanja').value + ".html";
+              const f2_name = document.getElementById('result_hanja').value + ".html";
 
               const f_msg = 
 
