--- a/write3.html
+++ b/write3.html
@@ -106,7 +106,7 @@ document.getElementById("btnFile1").onclick = function() {
       const strArray = name.split(" ");
   
 
-              const f1_name = strArray[0]; + ".html";
+              const f1_name = strArray[0] + ".html";
 
               const f_msg = 
 
@@ -132,7 +132,7 @@ document.getElementById("btnFile2").onclick = function() {
   
     
     
-              const f2_name = strArray[1]; + ".html";
+              const f2_name = strArray[1] + ".html";
 
               const f_msg = 
 
