--- a/write3.html
+++ b/write3.html
@@ -110,8 +110,8 @@ document.getElementById("btnFile1").onclick = function() {
 
               const f_msg = 
 
-   "<p>" + document.getElementById('hangul').value
-+ " " + document.getElementById('hanja').value
+   "<p>" + strArray[0]
++ " " + strArray[1]
 + " [" + document.getElementById('english').value + " " + document.getElementById('china').value + "]"
 + "<p>스펠: " + document.getElementById('spell').value
 + "<p>풀이: " + document.getElementById('story').value
@@ -136,8 +136,8 @@ document.getElementById("btnFile2").onclick = function() {
 
               const f_msg = 
 
-   "<p>" + document.getElementById('hangul').value
-+ " " + document.getElementById('hanja').value
+   "<p>" + strArray[0]
++ " " + strArray[1]
 + " [" + document.getElementById('english').value + " " + document.getElementById('china').value + "]"
 + "<p>스펠: " + document.getElementById('spell').value
 + "<p>풀이: " + document.getElementById('story').value
