--- a/write4.html
+++ b/write4.html
@@ -77,7 +77,9 @@ for(let i=0; i<hangul_array.length; i++){
 }
 
 spell.value += spell2.value;
+spell.value += " ";  
 spell.value += search_result;
+spell.value += " "; 
 
 }
 
