--- a/write4.html
+++ b/write4.html
@@ -8,7 +8,7 @@
 <button id="btnFile4">추가</button>
 <button id="btnFile5">초기화</button> <span id='result_spell2'></span> <span id='result_spell3'></span>&nbsp
 
-
+<p>스펠조합: <input id='temp_spell'     style="width:500px"/>
 <p>스펠: <input id='spell'     style="width:500px"  onkeyup='out_spell()'/>
 <p>풀이: <input id='story'     style="width:500px"  onkeyup='out_story()'/>
 <p>영어: <input id='english'   style="width:300px"  onkeyup='out_english()'/>
@@ -21,7 +21,7 @@
 <p> -----------------------------------------------------</p>
 <p><span id='result_hangul'></span> &nbsp <span id='result_hanja'></span> 
 &nbsp [ <span id='result_english1'></span> &nbsp <span id='result_china1'></span> ] </p> 
-
+    
 <p>스펠: &nbsp <span id='result_spell'></span>
 <p>풀이: &nbsp <span id='result_story'></span>
 <p>영어: &nbsp <span id='result_english2'></span>
@@ -37,17 +37,7 @@ const hanja_array = ['靑', '而', '阝', '曰',  '朿',  '央',  '中',  '韋',
 const hangul_array = ['푸를청', '말이을이', '언덕부변', '가로왈',  '가시자',  '가운데앙',  '가운데중',  '가죽위',  '가죽피',  '가죽혁',  '갈거',  '갈지',  '갈착',  '감출혜',  '갑옷갑',  '개견',  '개견변',  '개술',  '거듭증',  '거스를역',  '걸을척',  '검을현',  '검을흑',  '겉표',  '고기육',  '고를균',  '고무래정',  '고향향',  '골곡',  '공교로울교',  '괘이름간',  '구기작',  '구할구',  '굽을곡',  '귀신귀',  '귀이',  '그기',  '그릇명',  '그물망',  '그칠지',  '글월문',  '기름유',  '기슭엄',  '기와와',  '기운기',  '긴장',  '길게걸을인',  '길용',  '깃우',  '꼬리파',  '꿰뚫을관',  '꿸관',  '나라국',  '나무목',  '나아갈염',  '나아갈염2',  '날비',  '날생',  '날일',  '남녘병',  '낮오',  '내천',  '넉사',  '높을고',  '누를황',  '눈목',  '능할능',  '다섯오',  '다스릴윤',  '다시재',  '다행행',  '다행행',  '달감',  '달감',  '달릴발',  '달릴주',  '달월',  '대세',  '대죽',  '더불여',  '덮을멱',  '덮을아',  '도끼근',  '돌석',  '돌회',  '돼지머리계',  '돼지머리두',  '돼지시',  '돼지해',  '되승',  '두이',  '둥굴환',  '뒤져올치',  '들입',  '등배',  '등뼈려',  '등질발',  '또역',  '또우',  '또차',  '뚫을곤',  '룡용',  '마디촌',  '마을주',  '마음심',  '마음심변',  '마칠료',  '말두',  '말마',  '말미암을유',  '말씀언',  '망할망',  '머금을함',  '머리수',  '머리혈',  '먼저선',  '멀경',  '면할면',  '모방',  '목멜기',  '목항',  '몸기',  '몸신',  '뫼산',  '무거울중',  '무릇범',  '묶을속',  '문문',  '물고기어',  '물수',  '물수변',  '물줄기경',  '미칠급',  '바를정',  '받들공',  '발자국유',  '발족',  '방패간',  '밭전',  '배주',  '백성민',  '뱀사',  '버금아',  '벌레훼',  '범호',  '벼화',  '별진',  '병부절',  '병부절2',  '병부절3',  '병질엄',  '보일시',  '부탁할탁',  '북방임',  '분변할변',  '불룩할복',  '불화',  '불화발',  '붉을단',  '붓필',  '비수비',  '비우',  '비추',  '빛광',  '빛색',  '뿔각',  '삐침별',  '사귈교',  '사내부',  '사람인',  '사람인변',  '사사로울사',  '사슴록',  '산가지효',  '삼마',  '삼합집',  '새길록',  '새을',  '새조',  '새추',  '서녘서',  '서로호',  '석삼',  '선비사',  '설립',  '성씨씨',  '소금로',  '소우',  '소축',  '손수',  '손수변',  '손톱조',  '손톱조2',  '솜면',  '솥격',  '솥정',  '쇠금',  '수건건',  '수레차',  '숨을음',  '스스로자',  '신하신',  '실멱',  '싸울투',  '쌀미',  '쌀포',  '쌍상투관',  '쓰개모',  '쓸용',  '아니부',  '아닐비',  '아들자',  '아래하',  '아홉구',  '안석궤',  '양양',  '어그러질천',  '어금니아',  '어미모',  '어조사야',  '어조사우',  '어조사이',  '어조사호',  '어진사람인',  '억억',  '언덕구',  '언덕부',  '얼굴면',  '얼음빙',  '얽힐구',  '업업',  '없을무',  '여덟팔',  '여섯육',  '여자여',  '역사사',  '열십',  '예쁠봉',  '오로지전',  '오른우',  '오이과',  '올래',  '옷의',  '옷의변',  '왼손좌',  '왼좌',  '우뚝할올',  '우물정',  '원숭이우',  '윗상',  '으뜸원',  '이를운',  '이미이',  '이에내',  '이을계',  '일곱칠',  '일만만',  '일백백',  '일천천',  '임금왕',  '입구',  '입버릴감',  '자척',  '자축거릴촉',  '작을소',  '작을요',  '장군부',  '장인공',  '재주재',  '쟁기뢰',  '저녁석',  '저자시',  '절구구',  '점복',  '점주',  '조각장',  '조각편',  '조개폐',  '조조',  '좋을량',  '주검시',  '주살익',  '주인주',  '죽은뼈알',  '줄여',  '지게문호',  '지금금',  '지을작',  '집면',  '집엄',  '짝필',  '짝필2',  '차조출',  '창과',  '창모',  '창창',  '채마밭포',  '채울충',  '책편',  '칠복',  '칼도',  '칼도방',  '코끼리상',  '콩두',  '콩숙',  '큰대',  '큰도랑괴',  '클거',  '터놓을쾌',  '터럭삼',  '털모',  '토끼묘',  '펼신',  '평평할평',  '풀초',  '하품흠',  '한일',  '함께공',  '합할합',  '항상상',  '해년',  '향할향',  '혀설',  '홑단',  '화살시',  '활궁',  '흉할흉',  '흙토',  '흰백',  '힘력'  ];
 
 
-
-
-
-
-
-
-
-
 var a_array = [];
-
-
 
 document.getElementById("btnFile3").onclick = function() {
 
@@ -76,15 +66,15 @@ for(let i=0; i<hangul_array.length; i++){
       }
 }
 
-spell.value += spell2.value;
-spell.value += " ";  
-spell.value += search_result;
-spell.value += " "; 
+temp_spell.value += spell2.value;
+temp_spell.value += " ";  
+temp_spell.value += search_result;
+temp_spell.value += " "; 
 
 }
 
 document.getElementById("btnFile5").onclick = function() {
-spell.value = "";
+temp_spell.value = "";
 
 }
 
