--- a/write4.html
+++ b/write4.html
@@ -8,7 +8,6 @@
 <button id="btnFile4">추가</button>
 <button id="btnFile5">초기화</button> <span id='result_spell2'></span> <span id='result_spell3'></span>&nbsp
 
-<p>스펠조합: <input id='temp_spell'     style="width:500px"/>
 <p>스펠: <input id='spell'     style="width:500px"  onkeyup='out_spell()'/>
 <p>풀이: <input id='story'     style="width:500px"  onkeyup='out_story()'/>
 <p>영어: <input id='english'   style="width:300px"  onkeyup='out_english()'/>
@@ -66,10 +65,10 @@ for(let i=0; i<hangul_array.length; i++){
       }
 }
 
-temp_spell.value += spell2.value;
-temp_spell.value += " ";  
-temp_spell.value += search_result;
-temp_spell.value += " "; 
+spell.value += spell2.value;
+spell.value += " ";  
+spell.value += search_result;
+spell.value += " "; 
 
 }
 
