--- a/write4.html
+++ b/write4.html
@@ -70,6 +70,9 @@ spell.value += " ";
 spell.value += search_result;
 spell.value += " "; 
 
+const name = document.getElementById('spell').value;
+document.getElementById("result_spell").innerText = name;
+    
 }
 
 document.getElementById("btnFile5").onclick = function() {
