--- a/write5.html
+++ b/write5.html
@@ -9,7 +9,7 @@
 <button id="btnFile5">초기화</button> <span id='result_spell2'></span> <span id='result_spell3'></span>&nbsp
 
 <p>스펠: <input id='spell'     style="width:500px"  onkeyup='out_spell()'/>
-<p>풀이: <textarea id='story' cols = "30" rows = "30"     style="width:500px"  onkeyup='out_story()'/>
+<p>풀이: <textarea id='story' cols = "30" rows = "3"     style="width:500px"  onkeyup='out_story()'/></textarea>
 <p>영어: <input id='english'   style="width:300px"  onkeyup='out_english()'/>
 <p>중국: <input id='china'     style="width:300px"  onkeyup='out_china()'/>
 <p>일뜻: <input id='meaning' style="width:300px"  onkeyup='out_meaning()'/>
