--- a/touch4.html
+++ b/touch4.html
@@ -72,7 +72,7 @@
         });
 
         
-        document.getElementById('canvas').addEventListener('pointerdown', () => {
+        document.getElementById('canvas').addEventListener('pointerup', () => {
             isAbleDraw = false;
         });
 
